tests/ui/consts/miri_unleashed/assoc_const.stderr
error[E0080]: calling non-const function `<Vec<u32> as Drop>::drop`
  --> $DIR/assoc_const.rs:12:31
   |
LL |     const F: u32 = (U::X, 42).1;
   |                               ^ evaluation of `<std::string::String as Bar<std::vec::Vec<u32>, std::string::String>>::F` failed here
   |
note: inside `drop_in_place::<(Vec<u32>, u32)> - shim(Some((Vec<u32>, u32)))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `drop_in_place::<Vec<u32>> - shim(Some(Vec<u32>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/assoc_const.rs:29:13
   |
LL |     let y = <String as Bar<Vec<u32>, String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/assoc_const.rs:29:13
   |
LL |     let y = <String as Bar<Vec<u32>, String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/assoc_const.rs:12:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
